@@ -25,6 +25,7 @@ systemd System and Service Manager
  	- remove “sd_bus_try_close” function;
  	- remove “bus_remove_match_internal_kernel” function;
  	- remove “bus_add_match_internal_kernel” function;
+ 	- remove “bus_kernel_parse_unique_name” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
